--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ platform = atmelavr
 board = uno
 framework = arduino
 monitor_speed = 115200
+build = -Wwrite-strings
 
 lib_deps = 
   MIDI Library
-  Rotary
